--- a/experiment/springTrain/注解开发学习笔记.md
+++ b/experiment/springTrain/注解开发学习笔记.md
@@ -50,14 +50,14 @@ public class BookServiceImpl implements BookService {
 
 @Configuration
 @ComponentScan({"dao", "service"})
-public class SpringConfig {
+public class myConfig.SpringConfig {
 }
 ```
 
 * 接着把加载配置文件的语句换成
 
 ```
-ApplicationContext acx=new AnnotationConfigApplicationContext(SpringConfig.class);
+ApplicationContext acx=new AnnotationConfigApplicationContext(myConfig.SpringConfig.class);
 ```
 
 * 然后就可以将配置文件删除了
@@ -111,7 +111,7 @@ public class BookServiceImpl implements BookService {
 
 ```
 public void testIoC() {
-    AnnotationConfigApplicationContext acx = new AnnotationConfigApplicationContext(SpringConfig.class);
+    AnnotationConfigApplicationContext acx = new AnnotationConfigApplicationContext(myConfig.SpringConfig.class);
     BookService bookService = acx.getBean(BookService.class);
     BookService bookService01 = acx.getBean(BookService.class);
     System.out.println(bookService01);
@@ -151,7 +151,7 @@ private int bookPrice;
 
 * 这个value可以去引入配置文件里的参数
 * 操作流程如下
-* 先将`SpringConfig.java`提出来，放在java文件夹下，
+* 先将`myConfig.SpringConfig.java`提出来，放在java文件夹下，
 * 这是为了好好解析resources文件夹里的文件，不然idea会警告(虽然照样用就是了)
 * 通过`@PropertySource`注解，加入读取的`properties`文件名
 * 在`properties`文件中写键值对
@@ -159,14 +159,14 @@ private int bookPrice;
 
 流程展示
 
-* SpringConfig.java
+* myConfig.SpringConfig.java
 
 ```java
 
 @Configuration
 @ComponentScan({"dao", "service"})
 @PropertySource("mySelf.properties")
-public class SpringConfig {
+public class myConfig.SpringConfig {
 }
 ```
 
@@ -206,7 +206,7 @@ public class BookDaoImpl implements BookDao {
 @Configuration
 @ComponentScan({"dao", "service"})
 @PropertySource("mySelf.properties")
-public class SpringConfig {
+public class myConfig.SpringConfig {
 
     @Bean
     public DataSource dataSource() {
@@ -264,7 +264,7 @@ public class JdbcConfig {
 @ComponentScan({"dao", "service"})
 @PropertySource("mySelf.properties")
 @Import(JdbcConfig.class)
-public class SpringConfig {
+public class myConfig.SpringConfig {
 }
 ```
 
