--- a/experiment/bootDemo/学习总结.md
+++ b/experiment/bootDemo/学习总结.md
@@ -84,6 +84,10 @@ mybatis-plus:
 * 然后新建domain.Students类
 * 这个Data来自之前引入的lombok库
 * 意思是set,get,toString,equals,hashCode方法
+* TableField意思是当字段名与数据库中不一致时进行规范
+* 这里当初设置数据库不规范，数据库不应该用驼峰命名，应该是小写加下划线
+* TableId(type = IdType.AUTO)意思是遵循数据库的id自增长
+* 不然就是默认的雪花命名法，要16位的long型数据(数据库里是bigInt)
 
 ```java
 
