--- a/bootLearn/prep/命令行配置.md
+++ b/bootLearn/prep/命令行配置.md
@@ -5,12 +5,12 @@
 本项目部分配置通过命令行指定
 
 ```text
---prep.dir=E:\MyCode\prepDir\
+--prep.dir=E:\MyCode\prepDir\ --prep.apiKey=apiKey --prep.secretKey=secretKey
 ```
 
 这个参数使用idea的话，就加在`运行配置-程序实参`中
 使用cmd，则
 
 ```text
-java -jar prep-0.0.1-SNAPSHOT.jar --prep.dir=E:\MyCode\prepDir\
+java -jar prep-0.0.1-SNAPSHOT.jar --prep.dir=E:\MyCode\prepDir\ --prep.apiKey=apiKey --prep.secretKey=secretKey
 ```
