百度的OCR调用优化

--- a/bootLearn/prep/命令行配置.md
+++ b/bootLearn/prep/命令行配置.md
@@ -9,8 +9,8 @@
 ```
 
 这个参数使用idea的话，就加在`运行配置-程序实参`中
-使用cmd，则
+使用cmd，则按如下格式(带斜杠的最好加双引号)
 
-```text
-java -jar prep-0.0.1-SNAPSHOT.jar --prep.dir=E:\MyCode\prepDir\ --prep.apiKey=apiKey --prep.secretKey=secretKey
+```shell
+java -jar prep-0.0.1-SNAPSHOT.jar "--prep.dir=E:\MyCode\prepDir\" --prep.apiKey=apiKey --prep.secretKey=secretKey
 ```
